Remove transition effect from selected files

--- a/www/index.html
+++ b/www/index.html
@@ -382,7 +382,7 @@
         padding: 10px;
         margin: 10px;
         border-radius: 10px;
-        transition: filter 0.15s ease-in-out, background 0.24s ease-in-out;
+        transition: filter 0.15s ease-in-out;
     }
 
     ul#files > li.selected {
