--- a/www/index.html
+++ b/www/index.html
@@ -136,7 +136,7 @@
         right: var(--window-drop-shadow-margin);
         display: grid;
         padding: 5px;
-        grid-template-columns: 80px 48px 1fr 80px;
+        grid-template-columns: 80px 48px 1fr 48px 80px;
         grid-template-rows: var(--header-height);
         -webkit-user-select: none;
         user-select: none;
@@ -157,11 +157,14 @@
         */
     }
 
-    header .menu {
+    header .menu.hamburger {
         background-image: url("icon://open-menu-symbolic?size=32");
         background-repeat: no-repeat;
         background-position: center;
         background-size: 20px;
+    }
+
+    header .menu {
         width: 48px;
         height: var(--header-height);
         transition: height 0.2s ease-in-out;
@@ -253,7 +256,7 @@
     }
 
     header .menu .content:not(.showing) {
-        display: none;
+        display: none !important;
     }
 
     header .menu .tap-area {
@@ -1013,6 +1016,65 @@
         pointer-events: none;
         background: var(--secondary-pop-semi-transparent);
     }
+
+    #file-transfer-menu-icon {
+        width: 22px;
+        height: 22px;
+        align-self: center;
+        border-radius: 2px;
+        border: 2px solid var(--secondary-bg);
+        --percentage: 36%;
+        background: linear-gradient(
+            0deg,
+            var(--primary-fg) var(--percentage),
+            var(--primary-fg) var(--percentage),
+            rgba(255,255,255,0) var(--percentage),
+            rgba(250,250,250,0) 100%);
+    }
+
+    #file-transfer-popup {
+        display: flex;
+        flex-direction: column;
+        right: 15px;
+        overflow: hidden;
+        width: min(500px, calc(100% - 30px));
+    }
+
+    #file-transfer-popup > progress {
+        appearance: none;
+        width: 100%;
+    }
+
+    #file-transfer-popup > progress::-webkit-progress-bar {
+        background: var(--secondary-bg);
+    }
+
+    #file-transfer-popup > progress::-webkit-progress-value {
+        background: var(--secondary-pop);
+        height: 3px;
+    }
+
+    #file-transfer-popup > .information {
+        padding: 10px;
+        padding-top: 0;
+        overflow-x: auto;
+        display: flex;
+        flex-direction: column;
+        color: var(--secondary-fg);
+    }
+
+    #file-transfer-popup > .information > h2 {
+        text-align: center;
+    }
+
+    #file-transfer-popup > .information > h3 {
+        margin: 0;
+        font-size: 12px;
+    }
+
+    #file-transfer-popup > .information > p {
+        margin: 12px;
+    }
 </style>
 <body>
     <div id="sign-up" style="display: none">
@@ -1171,9 +1233,10 @@
     <main>
         <header id="header">
             <div></div>
+
             <button id="back">Back</button>
 
-            <div class="menu"
+            <div class="menu hamburger"
                 onclick="event.target.matches('.tap-area, .menu') && this.firstElementChild.classList.toggle('showing')">
                 <div class="content">
                     <form>
@@ -1213,6 +1276,32 @@
 
             <div class="folder-wrapper">
                 <h1 id="folder" contenteditable></h1>
+            </div>
+
+            <div class="menu" id="file-transfer-menu-icon"
+                onclick="event.target.matches('.tap-area, .menu') && this.firstElementChild.classList.toggle('showing')">
+                <div class="content" id="file-transfer-popup">
+                    <progress
+                        id="file-transfer-progress-bar"
+                        aria-label="File transfer progress"></progress>
+
+                    <div class="information">
+                    </div>
+
+                    <template>
+                        <h2>$NAME</h2>
+
+                        <h3>From</h3>
+                        <p class="from"></p>
+
+                        <h3>To</h3>
+                        <p class="to"></p>
+
+                        <button>Cancel</button>
+                    </template>
+                </div>
+
+                <div class="tap-area" aria-hidden=true></div>
             </div>
 
             <div class="controls">
@@ -1578,9 +1667,52 @@
             );
         };
 
+        /*
+         *
+
+                <div class="content file-transfer" id="file-transfer-popup">
+                    <progress
+                        id="file-transfer-progress-bar"
+                        aria-label="File transfer progress"></progress>
+
+                    <div class="information">
+
+                    <template>
+                        <h2>$NAME</h2>
+
+                        <h3>From</h3>
+                        <p class="from"></p>
+
+                        <h3>To</h3>
+                        <p class="to"></p>
+
+                        <button>Cancel</button>
+                    </template>
+
+        let filesSelection = {
+            kind: '',
+            folder: '',
+            selected: []
+        };
+                    */
         window.notifyFileTransferProgress = progress => {
             switch (progress.state) {
                 case 'normal': {
+                    const fileTransferEl = document.getElementById('file-transfer-popup');
+                    const information = fileTransferEl.querySelector('template').content.cloneNode(true);
+                        // FIXME: I need to send more than just the progress here it doesn't have the "to"
+
+                    information.querySelector('h2').textContent = 'Copy';
+                    information.querySelector('.from').textContent =
+                        `${filesSelection.folder}/${progress.fileName}`;
+                    information.querySelector('.to').textContent =
+                        `${filesSelection.folder}/${progress.fileName}`;
+
+                    fileTransferEl.querySelector('.information').innerHTML = '';
+                    fileTransferEl.querySelector('.information').append(information);
+                    fileTransferEl.querySelector('progress').value =
+                        progress.copiedBytes / progress.totalBytes;
+
                     rpc.invoke({
                         cmd: 'file_transfer',
                         resume: {
